# jerseyaiclub

./: README.md  pyproject.toml  workflow_report.md
src/jerseyaiclub/: crew.py  main.py
src/jerseyaiclub/config/: agents.yaml  tasks.yaml
src/jerseyaiclub/tools/: file_tool.py  pdf_tool.py
