[project]
name = "jerseyaiclub"
version = "0.1.0"
description = "jerseyaiclub using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
jerseyaiclub = "jerseyaiclub.main:run"
run_crew = "jerseyaiclub.main:run"
train = "jerseyaiclub.main:train"
replay = "jerseyaiclub.main:replay"
test = "jerseyaiclub.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
